cluster/base/istio.gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: app-gateway

spec:
  selector:
    istio: ingressgateway

  servers: []
